<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_menu_new_avatar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_link_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_link_photo_from_camera"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_link_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_link_photo_from_file"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_link_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_link_photo_delete"
        android:textSize="30sp" />
</LinearLayout>